# splitwizz-service

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.migrations  Makefile  README.md  build-docker-migrations.sh  build-docker.sh  docker-compose.test.yml
.cargo/: Config.toml
.sqlx/: query-05bc57f67357a15bfa3a6083b189a77e3ec9c474499ab55b470e99d105eecb17.json  query-0b2c0247334e8114b14f1e988dd12d647afc14e4c4e44d94b507e7cba90caa01.json  query-0caa0c75524a1ed26bf9ffe24dfd128da55c8fd5458a453ff4e657121ccc38f4.json  query-117721bc99b56cff30743d7a7c9a8ac072981163f984ef022b841a749520997c.json  query-16aec7f522536213eff55dfb80f47ef60411845a3af412a66cdafe29406465fa.json  query-1ee4dd27ce6049f42605855418d6958acd8cac749215a21fd0090798aca1e135.json  query-223a600f9540516cdec142433aeb1a96111328a20b13c33d90f2b40e139d1e62.json  query-24be8dd2e012baf2d650df163db84d730b9ca6ff5a2d027d41d3f45324bbc7ce.json  query-2785ea183dbfb882d5333dfdc91c08be83aff44898d9dd72e4c22c25099b2d30.json  query-2fc697884fbc5ee34bfed8bffe3835a1a8a9a5e1f8cb0beb8d62b7fb14356368.json  query-357c7de264fbad6f61d5bae53fdf3a0a6cb5a472558281e8fd2895ea4ee0b1a3.json  query-484cab4500770b2142d1c1fa4a5eae709fbe80a6f08db45756f822cf2e64511d.json  query-52534240041351f17674e2bbe600c9843d6bfbebe705dd6e18d365915e1df1f6.json  query-540715bd44d201f0a5d755e7b9f6254cd9a2f3ad900efb4a0aba42cb89025bc1.json  query-57823bb924d9caa886417ec136717b8547fc53dd5019e58c616f289cc278d0a1.json  query-6733e7d928f4c9267b7e137a8c58a2d2a8e9fd1393ae98cbdf7fde872689a677.json  query-68ce1eded7709800f8063faed7602349d397b65782f5ab59fa749a0a783ba587.json  query-6d82ed051e5d8d6c6bfcc2027cc05311f485d619cc23c2997180bbb8113664a0.json  query-6da77252f8f04f0b6a95191e7c2f5e11b3581c698a154e0b2105cc6d7ed9d5c9.json  query-78186e5e415b777b6637d6d4034552b1d927647cd7f625901cb367d07b28ab12.json  query-7833f1e316958cc2cc9a0a2fc4e8f7ba5dc9374fe5f44df9baa48efa4842e7d1.json  query-811444bf60f5c9552c20ae0ee85b229ee73cb407917f2211ed543c73f8e440d8.json  query-8230ec352809196d26b76837aa07785b9a12e69eb572e944037ddb0dd7d61868.json  query-848a7608d7726afcb5a62e137d420589907e098f1aa8a78bdc10c25f12ce57bf.json  query-8b13aceadce8656c01f996c1c2716396ac41d255fe300d26368fc823957f2913.json  query-9235d39b39fce1b194310e5ddab591c389a29348d52dfd1b6e64f37894e43329.json  query-a82a0aff401f942b034c637a6af0e523e9d4f6734ce17e7f3282dbe19a6b0673.json  query-b03b82d1a583e95b0ef82e3ec79b885d7482e3588abdc43b54e94b44fddfc4ad.json  query-bc473acaec8608722302e5f231dbd35246bd49579676be15280386d2a7e108c1.json  query-bce59c52ae642eb442817a6ddb891c93b8b8e76504dcfcbca06642a0ab2ff4a4.json  query-c0cd6bc040f46a4857eb1d2f0018f767707092156a91fa579c7af4be288589c8.json  query-c3927fc6c168907db5956b9d98b6fc891d2ffce85a702007bba9fd04d0599a8b.json  query-c9c6058c2f6b1320b4fbec0369b0baa1c331d2a79cb2c3ac231d38a72421eee8.json  (+6 more)
src/: auth.rs  (+7 more)
(+24 files in other folders)
