[package]
edition = "2021"
name = "splitwizz-service"
version = "0.1.0"

[dependencies]
actix-cors = "0.7"
actix-web = { version = "4.9", features = ["openssl"] }
auth = { path = "../auth" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
google-jwt-verify = { git = "https://github.com/moliva/google-jwt-verify", branch = "master", features = [
  "async",
] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "json",
  "chrono",
] }
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
bb8-redis = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11", features = ["serde", "v4"] }
tokio = { version = "1.42", features = ["macros"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
